# caffa-base

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  cafAssert.cpp  cafAssert.h  cafLogger.cpp  cafLogger.h  cafNotNull.h  cafStringTools.cpp  cafStringTools.h  cafUuidGenerator.cpp  cafUuidGenerator.h  vcpkg.json
.github/workflows/: CaffaBaseUnitTests.yml
Base_UnitTests/: CMakeLists.txt  cafUuidGeneratorTests.cpp
cmake/: git_submodule.cmake
